--- a/src/ui/users.html
+++ b/src/ui/users.html
@@ -10,7 +10,7 @@
     <main class="container-fluid">
         <div class="row">
             <div class="col-md-6 p-4 my-auto">
-                <form class="card card-body" id="checkUserForm">
+                <form class="card card-body" id="userForm">
                     <div class="form-group mt-3">
                         <input 
                             type="number" 
@@ -44,7 +44,10 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <ul id="userList"></ul>
+        </div>
     </main>
-    <script src="./app.js"></script>
+    <script src="./users.js"></script>
 </body>
 </html>
