Adjust creation of user and config creating check in and check out registers

--- a/src/ui/app.html
+++ b/src/ui/app.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <main class="container-fluid">
-        <div class="row">
+    <main class="container-fluid d-flex justify-content-center align-items-center" style="height: 70vh;">
+        <div class="row justify-content-center w-100">
             <div class="col-md-6 p-4 my-auto">
-                <form class="card card-body" id="checkUserForm">
+                <h1 class="fw-bold py-3 text-center">USE CODE REGISTRATION</h1>
+                <form class="card card-body" id="appForm">
                     <div class="form-group">
                         <input 
                             type="number" 
