--- a/src/ui/users.html
+++ b/src/ui/users.html
@@ -17,7 +17,7 @@
                             id="userCode" 
                             placeholder="Register a user code" 
                             class="form-control"
-                            autofocus>
+                            autofocus required>
                     </div>
 
                     <div class="form-group mt-3">
@@ -26,7 +26,7 @@
                             id="userName" 
                             placeholder="Register a user name" 
                             class="form-control"
-                            autofocus>
+                            autofocus required>
                     </div>
 
                     <div class="form-group mt-3">
@@ -35,7 +35,7 @@
                             id="userLastName" 
                             placeholder="Register a user last name" 
                             class="form-control"
-                            autofocus>
+                            autofocus required>
                     </div>
                     
                     <button class="btn btn-primary mt-3">
