--- a/src/ui/users.html
+++ b/src/ui/users.html
@@ -38,7 +38,7 @@
                             autofocus required>
                     </div>
                     
-                    <button class="btn btn-primary mt-3">
+                    <button type="submit" class="btn btn-primary mt-3">
                         Register
                     </button>
                 </form>
