In this time it has report window try get information with date range, but does not wotk

--- a/src/ui/app.html
+++ b/src/ui/app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron ans SQLite</title>
+    <title>Time record</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 
