--- a/src/ui/users.html
+++ b/src/ui/users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron & SQLite</title>
+    <title>User creation</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 <body>
