--- a/src/ui/report.html
+++ b/src/ui/report.html
@@ -22,28 +22,14 @@
                     class="form-control"
                     autofocus />
                 </div>
-
-                <div class="form-group my-2">
-                    <input type="date" 
-                    id="initialDate" 
-                    placeholder="Select the initial date" 
-                    class="form-control"/>
-                </div>
-
-                <div class="form-group my-2">
-                    <input type="date" 
-                    id="finalDate" 
-                    placeholder="Select the final date" 
-                    class="form-control"/>
-                </div>
-
+                
                 <button type="submit" class="btn btn-primary mt-3 w-100">
                     Search
                 </button>
             </form>
-
             <!-- Tabla -->
             <div class="">
+                <button id="download" class="btn btn-success mt-3" style="max-height: 32%; max-width: 20%;">Descargar CSV</button>
                 <table class="table table-striped table-hover" id="updateList">
                     <thead class="thead-dark">
                         <tr>
