Add function to get a backup data

--- a/src/ui/help.html
+++ b/src/ui/help.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technical support</title>
+    
+    <title>Technical Support</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
+
 <body>
     <main class="container-fluid p-5">
-        <div class="row justify-content-center p-5">
+        <div class="row justify-content-center p-1">
             <div class="col-md-8 p-5">
                 <p class="text-center text-justify p-5 border rounded bg-light shadow-sm">
-                    To obtain technical support you can write to the email 
+                    To obtain technical support you can write to the email
                     <a href="mailto:ombeltranduk@gmail.com">ombeltranduk@gmail.com</a>
                 </p>
             </div>
         </div>
+        <div class="row justify-content-center p-2">
+            <button id="backup" class="btn btn-success mt-3" style="max-width: 30%;">Backup Database</button>
+        </div>
     </main>
+    <script src="./help.js"></script>
 </body>
+
 </html>
