--- a/src/ui/report.html
+++ b/src/ui/report.html
@@ -29,7 +29,7 @@
             </form>
             <!-- Tabla -->
             <div class="">
-                <button id="download" class="btn btn-success mt-3" style="max-height: 32%; max-width: 20%;">Descargar CSV</button>
+                <button id="download" class="btn btn-success mt-3" style="max-height: 32%; max-width: 20%;">Download CSV</button>
                 <table class="table table-striped table-hover" id="updateList">
                     <thead class="thead-dark">
                         <tr>
