--- a/src/ui/report.html
+++ b/src/ui/report.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User update</title>
+    <title>User report</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 
